Initial GitHub pages site with Jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Blog de Jérémy Voisin
 email: voisin.jeremy@outlook.fr
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Un gars de l'IT, qui écrit pour partager la passion
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://jeremyvoisin.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: _JeremyVoisin_
