--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,8 @@ plugins:
   - jekyll-remote-theme 
   - jekyll-feed
 
+show_credits: false
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
